Windows Phone 7 issues: Fixed display issue where prev and next slideshow buttons were showing through Fixed alignment of slide dots on

--- a/site/Harvard-Tour/app/modules/tour/css/compliant-winphone7.css
+++ b/site/Harvard-Tour/app/modules/tour/css/compliant-winphone7.css
@@ -18,8 +18,6 @@
 	line-height: 20px;
 	font-size: 85%;
 }
-#pagetitle {
-}
 #pagetitle h1 {
   height: 52px;
   line-height: 25px;
@@ -40,4 +38,15 @@
 }
 #stoplink img {
   margin-top: 4px;
+}
+#tabbodies .tabbody .slideshow .slidenav {
+	display: none;
+}
+#tabbodies .tabbody.active .slideshow .slidenav {
+	display: block;
+}
+.slideshow .slidenav .slidedot {
+  height: 14px;
+  padding: 12px 0px;
+  line-height: 14px;
 }
