--- a/site/Harvard-Tour/app/modules/tour/css/index-compliant-winphone7.css
+++ b/site/Harvard-Tour/app/modules/tour/css/index-compliant-winphone7.css
@@ -4,3 +4,6 @@
 img.begin, img.resume {
   margin-top: 10px;
 }
+#welcomefooter img.startover {
+  margin-top: 10px;
+}
